--- a/_pages/talks.html
+++ b/_pages/talks.html
@@ -1,12 +1,12 @@
 ---
 layout: archive
-title: "Talks and presentations"
+title: "Oral and poster conference presentations"
 permalink: /talks/
 author_profile: true
 ---
 
-<p style="text-decoration:underline;"><a href="/talkmap.html">See a map of all the places I've given a talk!</a></p>
-
 {% for post in site.talks reversed %}
   {% include archive-single-talk.html %}
 {% endfor %}
+
+<iframe src="/talkmap/map.html" height="700" width="850" style="border:none;"></iframe>
