--- a/_pages/teaching.html
+++ b/_pages/teaching.html
@@ -10,3 +10,7 @@ author_profile: true
 {% for post in site.teaching reversed %}
   {% include archive-single.html %}
 {% endfor %}
+
+# ENR 3200: Environmental and Natural Resources Policy
+
+ENR 3200 is designed to provide a broad introduction to the institutions and processes that shape environmental and natural resources policy. At its core, this course focuses on the relationships between societies and their biophysical environments. While you will learn about key environmental laws and the responsibilities of different federal institutions, we will also discuss how policy processes are shaped by values, science, history, and relationships among stakeholder groups. Though perhaps not a learning objective, a key goal of this course is that students appreciate the diverse and dynamic settings in which environmental and natural resources policy processes play out, and consequently understand how these processes are relevant to their daily lives as well as their future careers. More specifically, by the end of the semester, you will be familiar with key concepts in environmental and natural resources policy (and how those concepts relate to one another). You will also gain skills that will enable you to analyze and understand policy processes and outcomes (for example: How are the costs and benefits of an environmental policy distributed among different groups of people? Why were they distributed that way?).
